# surrealdb-rpc-async

./: Cargo.toml  README.md
src/: client.rs  error.rs  lib.rs  pool.rs  request.rs  response.rs
tests/: pool.rs  test.rs
