[package]
name = "surrealdb-rpc-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
pool = []

[dependencies]
base64 = "0.13.1"
futures = "0.3.25"
maplit = "1.0.2"
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
tokio-tungstenite = "0.17.2"
